# python-demetriek

./: .editorconfig  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  LICENSE.md
.github/workflows/: codeql.yaml  linting.yaml  pr-labels.yaml  release.yaml  tests.yaml  typing.yaml
examples/: countdown.py  example.py  ruff.toml  toggle_dark.py
src/demetriek/: __init__.py  cloud.py  const.py  device.py  exceptions.py  models.py
tests/: __init__.py  ruff.toml  test_app.py  test_apps.py  test_audio.py  test_bluetooth.py  test_cloud.py  test_device.py  test_display.py  test_lametric.py  test_widget.py  test_wifi.py
tests/__snapshots__/: test_app.ambr  test_apps.ambr  test_device.ambr  test_widget.ambr
tests/fixtures/: app.json  app_activate.json  apps.json  apps_next.json  apps_prev.json  audio.json  audio_set.json  bluetooth.json  bluetooth_set.json  cloud_device.json  cloud_devices.json  device.json  device2.json  device3.json  display.json  display_set.json  me.json  notification.json  widget.json  widget_action.json  widget_update.json  wifi.json  wifi2.json
