[tool.poetry]
authors = ["Franck Nijhof <opensource@frenck.dev>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Asynchronous Python client for LaMetric TIME devices"
documentation = "https://github.com/frenck/python-demetriek"
homepage = "https://github.com/frenck/python-demetriek"
keywords = ["lamtric", "api", "async", "client"]
license = "MIT"
maintainers = ["Franck Nijhof <opensource@frenck.dev>"]
name = "demetriek"
packages = [{ include = "demetriek", from = "src" }]
readme = "README.md"
repository = "https://github.com/frenck/python-demetriek"
version = "0.0.0"

[tool.poetry.dependencies]
aiohttp = ">=3.0.0"
awesomeversion = ">=21.10.1"
backoff = ">=2.2.0"
mashumaro = ">=3.10"
orjson = ">=3.9.8"
python = "^3.11"
yarl = ">=1.6.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/frenck/python-demetriek/issues"
Changelog = "https://github.com/frenck/python-demetriek/releases"

[tool.poetry.group.dev.dependencies]
aresponses = "3.0.0"
codespell = "2.4.1"
covdefaults = "2.3.0"
coverage = { version = "7.10.7", extras = ["toml"] }
mypy = "1.18.2"
pre-commit = "4.3.0"
pre-commit-hooks = "6.0.0"
pylint = "3.3.9"
pytest = "8.4.2"
pytest-asyncio = "1.2.0"
pytest-cov = "7.0.0"
ruff = "0.13.3"
yamllint = "1.37.1"
syrupy = "5.0.0"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["demetriek"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
plugins = []
python_version = "3.11"

# flake8-mypy expects the two following for sensible formatting
show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.MASTER]
ignore = ["tests"]

[tool.pylint.BASIC]
good-names = ["_", "ex", "fp", "i", "id", "j", "k", "on", "Run", "T", "wv"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "too-few-public-methods",
  "duplicate-code",
  "format",
  "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.DESIGN]
max-attributes = 20

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff.lint]
ignore = [
  "ANN401",  # Opinioated warning on disallowing dynamically typed expressions
  "D203",    # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "D417",    # False positives in some occasions
  "PLR2004", # Just annoying, not really useful


  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",
]
select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["demetriek"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
  "mashumaro.mixins.orjson.DataClassORJSONMixin",
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.per-file-ignores]
"src/demetriek/models.py" = ["TCH002", "TCH003"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
